--- a/trunk/treebanks/annotation_guidelines/anotacion.tex
+++ b/trunk/treebanks/annotation_guidelines/anotacion.tex
@@ -4021,11 +4021,11 @@ PROVISORIO: Dislocaciones dependen del verbo como 'r.disl' ('right dislocation',
 
 \begin{examples}
 \item[] izquierda:
- \item {\em Hatun\textbf{pura}llatam papataqa munani.} (Ayacuchano)\\
+ \item {\em Hatunpuralla\textbf{ta}m papa\textbf{ta}qa munani.} (Ayacuchano)\\
 	'Quiero s\'olo papas grandes.'\\
   	\hfill{\small \citep[80]{Soto76a}}
  \item[] derecha:
- \item {\em Paraqayta\textbf{chu} ichari uwinata\textbf{chu} munashanki saratari?}\\
+ \item {\em Paraqayta\textbf{chu} ichari uwinata\textbf{chu} munashanki sarata\textbf{ri}?}\\
       '{\textquestiondown}Deseas la calidad blanca o la amarilla del ma\'iz?'\\
     		\hfill{\small \citep[236]{Cusi2}}
 \end{examples}
