Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -10,8 +10,8 @@ Installation:
   # Install compile the squoia analyzer server (it's a freeling analyzer server with "desr" output format option, i.e. prints out conll):
    * set paths:
 {{{
-export $FREELING= path-to-your-freeling-installation
-export $FREELING_SRC= path-to-your-freeling-sources (trunk from svn)
+export FREELING= path-to-your-freeling-installation
+export FREELING_SRC= path-to-your-freeling-sources (trunk from svn)
 }}}
   # compilation and installation of FreeLing:
 {{{
@@ -64,7 +64,39 @@ ln -s /usr/bin/doxygen /usr/local/bin/doxygen
 }}}
   # get the spanish model and conf file from:
     *[https://sites.google.com/site/desrparser/models]
-
+    * get also this model: [http://medialab.di.unipi.it/Project/QA/Parser/models/spanish_es4.MLP]
+    * save them in the directory of your desr installation
+  # compile desr server/client:
+{{{
+export FREELING= path-to-your-freeling-installation
+export FREELING_SRC= path-to-your-freeling-sources ( trunk from svn)
+export DESRHOME=path-to-your-desr-installation
+}}}
+  # compile parser client: desr_client
+{{{
+g++ -c -o desr_client.o desr_client.cc -I$FREELING/include/
+}}}
+  # link parser client:
+{{{
+g++ -O3 -Wall -o desr_client desr_client.o
+}}}
+  # compile parser server:
+{{{
+g++ -c -o desr_server.o desr_server.cc -std=gnu++0x -I$FREELING/include/ -I$DESRHOME/src/ -I/usr/include/python2.7/ -I$DESRHOME -I$DESRHOME/ixe/ -I$DESRHOME/classifier/
+}}}
+  # link parser server:
+{{{
+g++ -O3 -Wall -o desr_server desr_server.o $DESRHOME/src/libdesr.so  $DESRHOME/ixe/libixe.a
+}}}
+  # start the server:
+{{{
+./desr_server -m $DESRHOME/spanish_es4.MLP --port 5678 2> logdesr_es4 &
+}}}
+  # use the client to tag (FreeLing) and parse sentences:
+{{{
+echo "la madre se va. El padre se queda. El hijo duerme." | analyzer_client 8866 | ./desr_client 5678
+}}}
+  # 
 
 
 
