--- a/treebanks/annotation_guidelines/anotacion.tex
+++ b/treebanks/annotation_guidelines/anotacion.tex
@@ -11,6 +11,7 @@
 \usepackage{arydshln}
 %\usepackage{lsalike}
 \usepackage{hyperref}
+\usepackage[normalem]{ulem}
 \usepackage{framed}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{tikz}
@@ -3064,6 +3065,7 @@ Con el sufijo de caso {\em -paq} ('para que') recibe la etiqueta 'purp' ('purpos
 La combinaci\'on {\em -na} y {\em -kama} ('hasta que') se anota como 'sub', v\'ease p\'arrafo \ref{Sec:kamasub}.\\
 La combinaci\'on {\em -sqa} y {\em -pi} ('mientras') se anota como 'sub', v\'ease p\'arrafo \ref{Sec:pisub}.\\
 La combinaci\'on de {\em na} y {\em -rayku} resulta en una frase final y tambi\'en recibe la etiqueta 'purp', v\'ease p\'arrafo \ref{Sec:raykupurp}.\\
+La combinaci\'on {\em -sqa} y {\em -rayku} ('por/porque') se anota con 'caus'.\\
 La construcci\'on {\em -na} m\'as una forma finita de la copula se anota con 'oblg' (obligaci\'on), v\'ease p\'arrafo \ref{Sec:nakay}.
 
 \begin{examples}
@@ -3718,7 +3720,8 @@ V\'ease tambi\'en Fig. \ref{Fig:adverbios} ,\ref{Fig:manadm}, \ref{Fig:aridm} o 
 \subsubsection{La construcci\'on..{\em -na + kay} (tener que..)}\label{Sec:nakay}
 
 La construcci\'on de un verbo nominalizado con {\em -na} y una forma finita de la copula se anota de esta manera:
-La copula es la cabeza de la frase, y la forma con {\em -na} depende de ella como 'oblg' (obligaci\'on).
+La copula es la cabeza de la frase, y la forma con {\em -na} depende de ella como 'oblg' (obligaci\'on).\\t
+OJO: el sujeto puede ser marcado con genitivo o no, siempre depende del verbo nominalizado con {\em -na}, ya que est\'a marcado en ello con un sufijo posesivo (NO depende de la copula, al contrario de las formas habituales con {\em -q}!).
 
 \begin{examples}
  \item {\em Usqhaymi \textbf{rinay} kashan.}\\
